add some styles

--- a/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
+++ b/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
@@ -21,6 +21,6 @@
     </a>
     <a asp-action="BlockUser" asp-controller="CitizensAccount"> 
         <div class="form-group">
-            <input type="submit" value="Block citizen account user by Id" class="btn btn-danger"/>
+            <input type="submit" value="Block citizen account user by Id" class="btn btn-outline-danger"/>
         </div>
     </a>
