--- a/UtopiaCity/Views/CitizensAccount/BlockUser.cshtml
+++ b/UtopiaCity/Views/CitizensAccount/BlockUser.cshtml
@@ -7,6 +7,6 @@
     <input type="text" name="userId" /><br /><br />
 
     <div class="form-group">
-        <input type="submit" value="Block citizen account" class="btn btn-primary" />
+        <input type="submit" value="Block citizen account" class="btn btn-outline-danger" />
     </div>
 </form>
