--- a/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
@@ -1,11 +1,8 @@
 ﻿@model IEnumerable<UtopiaCity.Models.TimelineModel.TimelineModel>
 @addTagHelper *, UtopiaCity
-@{
-    string name = "Timeline-22";
-    ViewData["Title"] = name;
-}
 
-<h1>Main Page of Timeline-22</h1>
+
+<h1>@ViewData["Title"]</h1>
 
 <data></data>
 <div class="clock"></div>
