--- a/UtopiaCity/Views/Shared/_ChangeLangView.cshtml
+++ b/UtopiaCity/Views/Shared/_ChangeLangView.cshtml
@@ -1,20 +1,29 @@
 ﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Options
 
 @inject IViewLocalizer Localizer
-@inject IOptions<RequestLocalizationOptions> LocalOptions
+@inject IOptions<RequestLocalizationOptions> LocOptions
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 
 @{
     var requestCulture = Context.Features.Get<IRequestCultureFeature>();
-    var cultures = LocalOptions.Value.SupportedUICultures
-        .Select(i => new SelectListItem { Value = i.Name, Text = i.NativeName })
+    var cultureItems = LocOptions.Value.SupportedUICultures
+        .Select(c => new SelectListItem { Value = c.Name, Text = c.DisplayName })
         .ToList();
+    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}";
+    //   <p>"returnUrl " @returnUrl </p>
 }
 
-
-<form asp-controller="TimelineBasic" asp-action="ChangeLang" asp-route-returnUrl="@Context.Request.Path" method="post" class="form-horizontal">
-    Language: <select name="culture" onchange="this.form.submit();" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultures"></select>
-</form>
-
+<div title="@Localizer["Request culture provider:"] @requestCulture?.Provider?.GetType().Name">
+    <form id="selectLanguage" asp-controller="TimelineBasic"
+          asp-action="SetLanguage" asp-route-returnUrl="@returnUrl"
+          method="post" class="form-horizontal" role="form">
+        <label asp-for="@requestCulture.RequestCulture.UICulture.Name">@Localizer["Language:"]</label> <select name="culture"
+                                                                                                               onchange="this.form.submit();"
+                                                                                                               asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems">
+        </select>
+    </form>
+</div>
