--- a/UtopiaCity/Views/TimelineBasic/Create.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/Create.cshtml
@@ -5,9 +5,8 @@
     ViewData["Date"] = "Create";
 }
 
-<h1>CreateTimelineView</h1>
+<h1>@Localizer["CreateTimelineView"]</h1>
 
-<h4>TimelineModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,7 +33,7 @@
                 <span asp-validation-for="UniqueRules" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
