--- a/UtopiaCity/Views/Passenger/PassengerDetailsView.cshtml
+++ b/UtopiaCity/Views/Passenger/PassengerDetailsView.cshtml
@@ -1,12 +1,11 @@
 ﻿@model UtopiaCity.Models.Airport.Passenger
 
 @{
-    ViewData["Title"] = "PassengerDeleteView";
+    ViewData["Title"] = "PassengerDetailsView";
 }
 
-<h1>PassengerDeleteView</h1>
+<h1>Passenger Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Passenger</h4>
     <hr />
@@ -34,12 +33,16 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Ticket.Id)
-        </dd class>
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ResidentAccount)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ResidentAccount.Id)
+        </dd>
     </dl>
-    
-    <form asp-action="Passenger DeleteView">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" asp-action="Delete" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="ListOfDeparted">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="ListOfDeparted">Back to List</a>
 </div>
