--- a/UtopiaCity/Views/TransportManagers/IndexLuggageView.cshtml
+++ b/UtopiaCity/Views/TransportManagers/IndexLuggageView.cshtml
@@ -40,9 +40,9 @@
                 @Html.DisplayFor(modelItem => item.HostName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="EditLuggage" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="DetailsLuggage" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="DeleteLuggage" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
