--- a/UtopiaCity/Views/FireMessage/DeleteFireMessageView.cshtml
+++ b/UtopiaCity/Views/FireMessage/DeleteFireMessageView.cshtml
@@ -29,6 +29,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
+        @*<dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DepartureToThePlace)
+        </dt>*@
     </dl>
     
     <form asp-action="DeleteFireMessageView">
