--- a/UtopiaCity/Views/FireMessage/CreateFireMessageView.cshtml
+++ b/UtopiaCity/Views/FireMessage/CreateFireMessageView.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateFireMessageView">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
@@ -38,6 +38,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
