--- a/UtopiaCity/Views/FireMessage/DetailsFireMessageView.cshtml
+++ b/UtopiaCity/Views/FireMessage/DetailsFireMessageView.cshtml
@@ -28,6 +28,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
+        @*<dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DepartureToThePlace)
+        </dt>*@
     </dl>
 </div>
 <div>
