--- a/UtopiaCity/Views/FireMessage/FireMessageListView.cshtml
+++ b/UtopiaCity/Views/FireMessage/FireMessageListView.cshtml
@@ -21,6 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
+            @*<th>
+                @Html.DisplayNameFor(model => model.DepartureToThePlace)
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -36,6 +39,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.DepartureToThePlace)
+            </td>*@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
