--- a/UtopiaCity/Views/Home/Index.cshtml
+++ b/UtopiaCity/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
                     <img src="~/images/MainPage/business_icon 200px.jpg" alt="" />
                 </th>
                 <th class="specialTh">
-                    <img src="~/images/MainPage/estateSecond_icon 200px.jpg" alt="" />
+                    <img src="~/images/MainPage/fireSafety_icon 200px.jpg" alt="" />
                 </th>
                 <th class="specialTh">
                     <img src="~/images/MainPage/timeline_icon 200px.jpg" alt="" />
@@ -88,7 +88,7 @@
                 </td>
                 <td class="mainTd">
                     <h4>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="HousingSystem" asp-action="Index">HousingSystem</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="FireSafetySystem" asp-action="Index">Fire system</a>
                     </h4>
                 </td>
                 <td class="mainTd">
